When window is resized, resize videos to prevent video height from being stretched

--- a/css/chat.css
+++ b/css/chat.css
@@ -25,10 +25,6 @@ input[type=text] {
   margin-bottom: 10px;
 }
 
-.camera {
-  text-align: center;
-}
-
 #connect {
   background-color: #fff;
   padding: 20px;
